--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,3 +27,10 @@ markdown_extensions:
   - admonition
   - toc:
       permalink: True
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
