- Fixes #13: Missing Proto dir? - Fixes #14: Don't throw away ImportError in __init__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,9 +70,9 @@ keywords =
 
 [options]
 python_requires = >=3.6, <4
-packages = takproto
+packages = takproto, takproto.proto
 package_dir = 
-  adsbcot = takproto
+  takproto = takproto
 install_requires = 
   protobuf >= 4.21.0
   delimited-protobuf >= 1.0.0
