Happy Summer Solstice
- Fixes #72: Add a config variable for users to set expected CN when using CA verification. Thanks @ahoenerBE
- Added configuration parameter: PYTAK_TLS_SERVER_EXPECTED_HOSTNAME
- Rewrote GitHub actions, moved most logic to shell script and Makefile.
- Renamed Debian package from python3-pytak to pytak.
- Standardized Makefile for all PyTAK based programs.
- Cleaned, simplified and expanded documentation.
- Created Makefile jobs for Debian packaging and PyTAK customization.
- Moved all media to media sub directory under docs/.
- Converted README.rst to README.md.
- Style & Linting of code.
- Refactored TLS client creation, abstracted many functions.
- Added TLS client cert and key checks and improved error messages.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: TAKProto - Send & Receive Team Awareness Kit (TAK) packets with Python.
+site_name: A Python package for the TAK Protocol.
 site_url: https://takproto.rtfd.io/
 repo_url: https://github.com/snstac/takproto/
 site_description: A Python module to encode & decode Team Awareness Kit (TAK) Protocol-based Cursor on Target (CoT) messages.
