--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 # Setup for the Python TAK Protocol Packet - Version 1 Module.
+# setup.cfg from https://github.com/snstac/takproto
 #
 # Copyright Sensors & Signals LLC https://www.snstac.com
 # Copyright 2020 Delta Bravo-15
@@ -31,9 +32,9 @@ project_urls =
   CI: GitHub Actions = https://github.com/snstac/takproto/actions
   GitHub: issues = https://github.com/snstac/takproto/issues
   GitHub: repo = https://github.com/snstac/takproto
-description = A Python module to encode & decode 'TAK Protocol Payload - Version 1' Protocol Buffer based Cursor on Target (CoT) messages.
-long_description = file: README.rst
-long_description_content_type = text/x-rst
+description = TAKProto is a Python package for the TAK protocol.
+long_description = file: README.md
+long_description_content_type = text/markdown
 maintainer = Greg Albrecht <oss@undef.net>
 maintainer_email = oss@undef.net
 license = MIT License
