--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ project_urls =
   CI: GitHub Actions = https://github.com/snstac/takproto/actions
   GitHub: issues = https://github.com/snstac/takproto/issues
   GitHub: repo = https://github.com/snstac/takproto
-description = TAKProto is a Python package for the TAK protocol.
+description = TAKProto is a Python package to encode and decode TAK data.
 long_description = file: README.md
 long_description_content_type = text/markdown
 maintainer = Greg Albrecht <oss@undef.net>
