importing delimited_protobuf.py from source to avoid external dependency.

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
 Package3: takproto
 Replaces3: python3-takproto
-Depends3: python3-protobuf, python3-delimited-protobuf
+Depends3: python3-protobuf
